# chatg

./: CMakeLists.txt  README.md
include/: PlaintextConnection.h  SSLConnection.h  cert.h  clientssl.h  public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h  sqlconnRAII.h  sqlconnpool.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  clientssl.cpp  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp  sqlconnpool.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/JSON/: test  testjson.cpp
test/JSON/muduo/: CMakeLists.txt  testmuduo.cpp
